@@ -1,3 +1,11 @@
+2002-12-07  Eric Blake  <ebb9@email.byu.edu>
+
+	* configure.in:
+	* src/m4/ac_cxx_bool.m4:
+	* src/m4/ac_try_encoding.m4: Remove warnings, to allow
+	configuration with CXXFLAGS='-W -Werror'.
+	* configure: Regenerate.
+
 2002-12-06  Eric Blake  <ebb9@email.byu.edu>
 
 	* src/ast.h: Code cleanup.
